<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_columnSpan="2"
        android:layout_rowWeight="1"
        android:textAlignment="center"
        android:paddingTop="55dp"
        android:layout_row="0"
        android:layout_column="0"/>
    <Button
        android:layout_column="0"
        android:layout_row="1"
        android:gravity="center"
        android:layout_rowWeight="4"
        android:layout_columnWeight="1"
        android:id="@+id/btnTicketMaster"
        android:background="@drawable/ticket_master"
        android:text="@string/TicketMaster"/>
    <Button
        android:layout_column="1"
        android:layout_row="1"
        android:gravity="center"
        android:layout_rowWeight="4"
        android:layout_columnWeight="1"
        android:id="@+id/btnRecipeSearch"
        android:background="@drawable/recipe_search"
        android:text="@string/RecipeSearch"/>
    <Button
        android:layout_column="0"
        android:layout_row="2"
        android:gravity="center"
        android:layout_rowWeight="4"
        android:layout_columnWeight="1"
        android:id="@+id/btnCovid19Data"
        android:background="@drawable/covid19_data"
        android:text="@string/Covid19Data"/>
    <Button
        android:layout_column="1"
        android:layout_row="2"
        android:gravity="center"
        android:layout_rowWeight="4"
        android:layout_columnWeight="1"
        android:id="@+id/btnAudioDatabase"
        android:background="@drawable/audio_database"
        android:text="@string/AudioDatabase"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AuthorInfo"
        android:layout_columnSpan="2"
        android:layout_rowWeight="1"
        android:textAlignment="center"
        android:layout_row="3"
        android:layout_column="0"/>
        />

</GridLayout>